[REFACTOR] userid 받아오는거로 통일