@@ -16,7 +16,6 @@ import com.frend.planit.domain.user.repository.UserRepository;
 import com.frend.planit.global.exception.ServiceException;
 import com.frend.planit.global.response.PageResponse;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
@@ -174,8 +173,9 @@ public class MateCommentService {
     @Transactional(readOnly = true)
     public List<MateCommentResponseDto> getUserMateComments(Long userId) {
         List<MateComment> comments = mateCommentRepository.findByUserId(userId);
+
         return comments.stream()
                 .map(MateCommentMapper::toResponseDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
